# dbmaster

./: .gitignore  LICENSE  README.md  make.bat  make.sh  pyproject.toml  requirements.txt
.github/workflows/: build.yml
dbmaster/: __init__.py  __main__.py  command.py  config.py  config_example.toml  util.py
dbmaster/catalog/: __init__.py  base.py  kline.py
dbmaster/derived/: __init__.py  base.py  pmom.py
example/: compute_pmom_binance.bat  schedule_job.py  update_kline_binance.bat
tests/: test_binance.py  test_kline.py  test_pmom.py
