[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dbmaster"
version = "0.1.0"
dependencies = [
    "numpy>=1.26, <2.0",
    "pandas>=2.1, <3.0",
    "pydantic>=2.7.0, <3.0",
    "pydantic-settings>=2.2, <3.0",
    "SQLAlchemy>=2.0, <3.0",
    "fire>=0.6.0, <1.0",
    "retry>=0.9.2, <1.0",
]
requires-python = ">=3.12"
authors = [{ name = "You Xie", email = "xyshell@bu.edu" }]
maintainers = [{ name = "You Xie", email = "xyshell@bu.edu" }]
description = "Personal Quant Research Database Manager"
readme = "README.md"
urls = { repository = "https://github.com/xyshell/dbmaster" }
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",

    "Intended Audience :: Developers",
    "Intended Audience :: Quant Research",

    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.1", "ruff>=0.4", "build>=1.2"]
binance = ["python-binance>=1.0.19, <2.0"]

[project.scripts]
dbmaster = "dbmaster.__main__:Main"

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_file_level = "WARNING"
log_format = "%(asctime)s [%(levelname)s] %(name)s <%(filename)s:%(lineno)d>: %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ruff]
line-length = 120
output-format = "full"

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"] # `import *` used; unable to detect undefined names
